# app-radio-aficionado

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLEAN_ARCHITECTURE.md  main.py  main_clean.py  migration.py  preguntas_radioaficionados.json  pyproject.toml  quiz_data.json
preguntas/: quiz_data.json  quiz_data_legacy.json  quiz_export_quiz_format.json  quiz_export_text_only.csv
src/: data_saver.py  image_downloader.py  quiz_extractor.py  quiz_utils.py  scrapper.py  selenium_scrapper.py
src/application/: __init__.py  quiz_extractor.py
src/application/quiz/: get_question_by_caretegory_use_case.py  get_question_by_id_use_case.py  get_questions_use_case.py
src/application/scraping/: quiz_extractor.py  scraping_use_case.py
src/application/services/: quiz_service.py
src/application/use_cases/: quiz_use_cases.py
src/domain/: __init__.py  quizQuestionModel.py
src/domain/entities/: quiz_question.py
src/domain/exam/: exam_model.py
src/domain/quiz/: quizQuestionFactory.py  quizQuestionModel.py  quiz_question_factory.py  quiz_question_model.py
src/domain/repositories/: __init__.py  quiz_repository.py
src/domain/stats/: stats_model.py
src/framework/: config.py
src/infrastructure/: config.py  data_saver.py  driver_config.py  image_downloader.py  selenium_scrapper.py
src/infrastructure/file_storage/: __init__.py
src/infrastructure/repositories/: json_quiz_repository.py
src/infrastructure/scraping/: config.py  data_saver.py  driver_config.py  (+3 more)
src/presentation/: __init__.py
src/shared/: create_proyect_structure.py  utils.py
(+8 files in other folders)
